syntax = "proto3";

option go_package = "optisam-backend/metric-service/pkg/api/v1";

package optisam.metric.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

service MetricService {
   // ListMetrices
   rpc ListMetrices(ListMetricRequest) returns (ListMetricResponse) {
    option (google.api.http) = {
      get : "/api/v1/metrics"
    };
  }

   // DeleteMetric deletes the metric that is not used in the particular scope
   rpc DeleteMetric(DeleteMetricRequest) returns (DeleteMetricResponse) {
    option (google.api.http) = {
      delete : "/api/v1/metric/{metric_name}"
    };
  }

  // ListMetricType
  rpc ListMetricType(ListMetricTypeRequest) returns (ListMetricTypeResponse) {
    option (google.api.http) = {
      get : "/api/v1/metric/types"
    };
  }

  // CreateMetricOracleProcessorStandard will create an oracle.processor.standard metric
  rpc CreateMetricOracleProcessorStandard(MetricOPS)returns (MetricOPS){
    option (google.api.http) = {
      post : "/api/v1/metric/ops"
      body : "*"
    };
  }

  // UpdateMetricOracleProcessorStandard will update an IBM.pvu.standard metric
  rpc UpdateMetricOracleProcessorStandard(MetricOPS)returns (UpdateMetricResponse){
    option (google.api.http) = {
      put : "/api/v1/metric/ops"
      body : "*"
      additional_bindings{
        patch : "/api/v1/metric/ops"
        body : "*"
      }
    };
  }

  // CreateMetricOracleNUPStandard will create an oracle.nup.standard metric
  rpc CreateMetricOracleNUPStandard(MetricNUP)returns (MetricNUP){
    option (google.api.http) = {
      post : "/api/v1/metric/oracle_nup"
      body : "*"
    };
  }

  // UpdateMetricOracleNUPStandard will update an IBM.pvu.standard metric
  rpc UpdateMetricOracleNUPStandard(MetricNUP)returns (UpdateMetricResponse){
    option (google.api.http) = {
      put : "/api/v1/metric/oracle_nup"
      body : "*"
      additional_bindings{
        patch : "/api/v1/metric/oracle_nup"
        body : "*"
      }
    };
  }

  // CreateMetricSAGProcessorStandard will create an sag.processor.standard metric
  rpc CreateMetricSAGProcessorStandard(MetricSPS)returns (MetricSPS){
    option (google.api.http) = {
      post : "/api/v1/metric/sps"
      body : "*"
    };
  }

    // UpdateMetricSAGProcessorStandard will update an IBM.pvu.standard metric
  rpc UpdateMetricSAGProcessorStandard(MetricSPS)returns (UpdateMetricResponse){
    option (google.api.http) = {
      put : "/api/v1/metric/sps"
      body : "*"
      additional_bindings{
        patch : "/api/v1/metric/sps"
        body : "*"
      }
    };
  }

   // CreateMetricIBMPvuStandard will create an IBM.pvu.standard metric
   rpc CreateMetricIBMPvuStandard(MetricIPS)returns (MetricIPS){
    option (google.api.http) = {
      post : "/api/v1/metric/ips"
      body : "*"
    };
  }

  // UpdateMetricIBMPvuStandard will update an IBM.pvu.standard metric
  rpc UpdateMetricIBMPvuStandard(MetricIPS)returns (UpdateMetricResponse){
    option (google.api.http) = {
      put : "/api/v1/metric/ips"
      body : "*"
      additional_bindings{
        patch : "/api/v1/metric/ips"
        body : "*"
      }
    };
  }

  // CreateMetricAttrCounterStandard will create an attribute.counter.standard metric
  rpc CreateMetricAttrCounterStandard(MetricACS)returns (MetricACS){
    option (google.api.http) = {
      post : "/api/v1/metric/acs"
      body : "*"
    };
  }

  // UpdateMetricAttrCounterStandard will update an metric.acs.attr_value metric
  rpc UpdateMetricAttrCounterStandard(MetricACS)returns (UpdateMetricResponse){
    option (google.api.http) = {
      put : "/api/v1/metric/acs"
      body : "*"
      additional_bindings{
        patch : "/api/v1/metric/acs"
        body : "*"
      }
    };
  }

  // CreateMetricInstanceNumberStandard will create an instance.number.standard metric
  rpc CreateMetricInstanceNumberStandard(MetricINM)returns (MetricINM){
    option (google.api.http) = {
      post : "/api/v1/metric/inm"
      body : "*"
    };
  }

  // UpdateMetricInstanceNumberStandard will update an instance.number.standard metric
  rpc UpdateMetricInstanceNumberStandard(MetricINM)returns (UpdateMetricResponse){
    option (google.api.http) = {
      put : "/api/v1/metric/inm"
      body : "*"
      additional_bindings{
        patch : "/api/v1/metric/inm"
        body : "*"
      }
    };
  }


  // CreateMetricUserSumStandard will create an oracle.processor.standard metric
  rpc CreateMetricUserSumStandard(MetricUSS)returns (MetricUSS){
    option (google.api.http) = {
      post : "/api/v1/metric/uss"
      body : "*"
    };
  }

  // CreateMetricAttrSumStandard will create an attribute.sum.standard metric
  rpc CreateMetricAttrSumStandard(MetricAttrSum)returns (MetricAttrSum){
    option (google.api.http) = {
      post : "/api/v1/metric/attr_sum"
      body : "*"
    };
  }

  // UpdateMetricAttrSumStandard will update an instance.number.standard metric
  rpc UpdateMetricAttrSumStandard(MetricAttrSum)returns (UpdateMetricResponse){
    option (google.api.http) = {
      put : "/api/v1/metric/attr_sum"
      body : "*"
      additional_bindings{
        patch : "/api/v1/metric/attr_sum"
        body : "*"
      }
    };
  }

  //GetMetricConfiguration will get configuration of a metric
  rpc GetMetricConfiguration(GetMetricConfigurationRequest)returns (GetMetricConfigurationResponse){
    option (google.api.http) = {
      get : "/api/v1/metric/config"
    };
  }

  rpc DropMetricData(DropMetricDataRequest) returns (DropMetricDataResponse) {
    option (google.api.http) = {
      delete : "/api/v1/metrics/{scope}"
    };
  } 
}

message DropMetricDataRequest{
  string scope = 1  [(validate.rules).string.pattern = "\\b[A-Z]{3}\\b"];
}
message DropMetricDataResponse{
  bool success = 1;
}

message DeleteMetricRequest{
  string metric_name = 1 [ (validate.rules).string.pattern = "[.-_A-Za-z0-9]+$" ];
  string scope = 2 [(validate.rules).string = {
    pattern : "^[A-Z]+$",
    min_len : 3,
    max_len: 3,
  }];
}

message DeleteMetricResponse { 
  bool success = 1; 
}

message GetMetricConfigurationRequest{
  Metric metric_info = 1;
  bool GetID = 2;
  repeated string scopes = 3 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3];
}

message GetMetricConfigurationResponse{
  string metric_config = 1;
}

message MetricUSS {
  // ID is not required for creation
  string ID = 1;
  string Name = 2 [(validate.rules).string = { min_len : 1, pattern : "[.-_A-Za-z0-9]+$"}];
  repeated string scopes = 3 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3];

}

message MetricINM {
  // ID is not required for creation
  string ID = 1;
  string Name = 2 [(validate.rules).string = { min_len : 1, pattern : "[.-_A-Za-z0-9]+$"}];
  int32 num_of_deployments = 3 [(validate.rules).int32 = { gt: 0}];
  repeated string scopes = 4 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3];

}

message UpdateMetricResponse { 
  bool success = 1; 
}

message MetricAttrSum {
  // ID is not required for creation
  string ID = 1;
  string name = 2 [(validate.rules).string = { min_len : 1, pattern : "[.-_A-Za-z0-9]+$"}];
  string eq_type = 3;
  string attribute_name = 4;
  double reference_value = 5 [(validate.rules).double = { gt: 0}];
  repeated string scopes = 6 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3]; 
}

message MetricIPS {
  // ID is not required for creation
  string ID = 1;
  string Name = 2 [(validate.rules).string = { min_len : 1, pattern : "[.-_A-Za-z0-9]+$"}];
  string num_core_attr_id = 3;
  string core_factor_attr_id = 4;  
  string base_eq_type_id = 5;
  repeated string scopes = 6 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3];

}

message MetricSPS {
  // ID is not required for creation
  string ID = 1;
  string Name = 2 [(validate.rules).string = { min_len : 1, pattern : "[.-_A-Za-z0-9]+$"}];
  string num_core_attr_id = 3;
  string core_factor_attr_id = 4;  
  string base_eq_type_id = 5;
  repeated string scopes = 6 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3];

}

message MetricACS {
  // ID is not required for creation
  string ID = 1;
  string name = 2 [(validate.rules).string = { min_len : 1, pattern : "[.-_A-Za-z0-9]+$"}];
  string eq_type = 3;
  string attribute_name = 4;
  string value = 5;
  repeated string scopes = 6 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3];
   
}

message ListMetricRequest {
  repeated string scopes = 1 [(validate.rules).repeated.min_items = 1,(validate.rules).repeated.items.string.pattern = "\\b[A-Z]{3}\\b"];
}

message ListMetricResponse {
  repeated Metric metrices = 1;
}

message Metric {
  string type = 1;
  string name = 2;
  string description = 3;
}

message ListMetricTypeRequest {
  repeated string scopes = 1 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.pattern = "\\b[A-Z]{3}\\b"];
}

message ListMetricTypeResponse {
  repeated MetricType types = 1;
}

message MetricType {
  enum Type {
    Unknown = 0;
    Oracle_Processor  = 1;
    Oracle_NUP = 2;
    SAG_Processor = 3;
    IBM_PVU = 4;
    Attr_Counter = 5;
    Instance_Number = 6;
    Attr_Sum = 7;
    User_Sum = 8;
  }
  string name = 1;
  string description = 2;
  string href = 3;
  Type type_id = 4;
}

message MetricOPS {
  // ID is not required for creation
  string ID = 1;
  string Name = 2 [(validate.rules).string = { min_len : 1, pattern : "[.-_A-Za-z0-9]+$"}];
  string num_core_attr_id = 3;
  string numCPU_attr_id = 4;
  string core_factor_attr_id = 5;
  string start_eq_type_id = 6;
  string base_eq_type_id = 7;
  string aggerateLevel_eq_type_id = 8;
  string end_eq_type_id = 9;
  repeated string scopes = 10 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3];
}

message MetricNUP {
  // ID is not required for creation
  string ID = 1;
  string Name = 2 [(validate.rules).string = { min_len : 1, pattern : "[.-_A-Za-z0-9]+$"}];
  string num_core_attr_id = 3;
  string numCPU_attr_id = 4;
  string core_factor_attr_id = 5;
  string start_eq_type_id = 6;
  string base_eq_type_id = 7;
  string aggerateLevel_eq_type_id = 8;
  string end_eq_type_id = 9;
  uint32  number_of_users = 10 [(validate.rules).uint32.gt  = 0];
  repeated string scopes = 11 [(validate.rules).repeated = {min_items: 1, max_items: 1},(validate.rules).repeated.items.string.len = 3];

}

message ScopeFilter{
  repeated string scopes =1;
}

message AggregationFilter {
  // Not For metric means aggregation for a product should not exist for a given metric
  string NotForMetric = 1;
}

message StringFilter {
  enum Type{
    REGEX=0;
    EQ=1;
  }
  int32 filteringOrder = 1;
  string filteringkey = 2;
  Type filter_type = 3;
  repeated string filteringkey_multiple=4;
}

enum SortOrder {
  option allow_alias = true;
  ASC = 0;
  asc = 0;
  DESC = 1;
  desc = 1;
}

enum DataTypes {
  UNKNOWN = 0;
  STRING = 1;
  INT    = 2;
  FLOAT  = 3;
}



  

  
